# SubsTrack

./: .env.example  .gitignore  README.md  dev.yml  docker-compose.dev.yml  docker-compose.yml  nestfile  prod.yml
backend/: .dockerignore  Dockerfile  config.py  entrypoint.sh  init_db.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  routes.py
backend/app/api/endpoints/: categories.py
backend/app/controller/: __init__.py  auth_controller.py  routes.py  statistics_controller.py  subscription_controller.py  telegram_controller.py
backend/app/core/: __init__.py  currency.py  database.py  dependencies.py  security.py  telegram.py
backend/app/models/: __init__.py  category.py  history.py  notification_log.py  notification_rule.py  payment.py  subscription.py  user.py
backend/app/repository/: __init__.py  subscription_repository.py  user_repository.py
backend/app/schema/: __init__.py  auth.py  category.py  history.py  payment.py  statistics.py  subscription.py
backend/app/service/: __init__.py  auth_service.py  reminder_service.py  statistics_service.py  subscription_service.py  telegram_service.py  user_service.py
backend/migrations/models/: 0_20260103135200_init.py  1_20260104044656_add_notification_rules.py  2_20260104124237_add_is_admin_cleanup.py  3_20260104125002_remove_weekly_summary.py  4_20260104125245_remove_urgent_reminder.py  5_20260104135453_update.py  6_20260104094941_add_user_to_category.py  6_20260104173226_add_user_to_category_and_subscription.py
docker/: compose.yml  dev.yml
(+43 files in other folders)
